--- a/Html/Form/index.html
+++ b/Html/Form/index.html
@@ -15,12 +15,13 @@
             <div class="left">
                 <h1>General Information</h1>
                 <form action="" method="post">
-                    <div>
+                    <div class="name">
+                        <label for="firstname"></label>
+                        <input type="text" name="Ner" id="firstname" placeholder="Firstname">
+
                         <label for="lastname"></label>
                         <input type="text" name="Ovog" id="lastname" placeholder="Lastname">
 
-                        <label for="firstname"></label>
-                        <input type="text" name="Ner" id="firstname" placeholder="Firstname">
                     </div>
                     <div>
                         <label for="email"></label>
@@ -36,7 +37,7 @@
                     </div>
                     <div>
                         <label for="Position"></label>
-                        <select name="Position" id="Position">
+                        <select name="Position" id="position">
                             <option value="Position">Position</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
