--- a/Html/Transition/index.html
+++ b/Html/Transition/index.html
@@ -60,6 +60,13 @@
         <div class="ball ball-3"></div>
     </div>
 
+    <!-- Box-ball Start -->
+
+    <h1>Check-box</h1>
+    <div class="center">
+        <input type="checkbox" id="checkbox">
+    </div>
+
 </body>
 
 </html>
