--- a/Html/Transition/index.html
+++ b/Html/Transition/index.html
@@ -15,7 +15,7 @@
 
     <div class="hover-transition">
         <h1>Tap</h1>
-        <div class="tap"></div>
+        <div class="tap"><input class="tap-input" value="Click Me"></div>
         <h1>Hover</h1>
         <div class="hover"></div>
     </div>
@@ -60,12 +60,35 @@
         <div class="ball ball-3"></div>
     </div>
 
-    <!-- Box-ball Start -->
+    <!-- Box-ball End -->
+
+    <!-- Check-box Start -->
 
     <h1>Check-box</h1>
-    <div class="center">
+    <div>
         <input type="checkbox" id="checkbox">
     </div>
+
+    <!-- Check-box End -->
+
+
+    <!-- Sidebar Start -->
+    <h1>Sidebar</h1>
+
+    <div class="sidebar">
+        <div class="icon">X</div>
+        <div id="bar">
+            <div class=" bar bar1">x</div>
+            <div class=" bar bar2">x</div>
+            <div class=" bar bar3">x</div>
+        </div>
+
+        <!-- <div class=" bar bar1">Улс Төр</div>
+        <div class=" bar bar2">Нийгэм</div>
+        <div class=" bar bar3">Спорт</div> -->
+    </div>
+
+    <!-- Sidebar End -->
 
 </body>
 
