--- a/Html/Transition/index.html
+++ b/Html/Transition/index.html
@@ -78,17 +78,57 @@
     <div class="sidebar">
         <div class="icon">X</div>
         <div id="bar">
-            <div class=" bar bar1">x</div>
-            <div class=" bar bar2">x</div>
-            <div class=" bar bar3">x</div>
+            <div class=" bar bar1">Улс Төр</div>
+            <div class=" bar bar2">Нийгэм</div>
+            <div class=" bar bar3">Спорт</div>
         </div>
 
-        <!-- <div class=" bar bar1">Улс Төр</div>
-        <div class=" bar bar2">Нийгэм</div>
-        <div class=" bar bar3">Спорт</div> -->
     </div>
 
     <!-- Sidebar End -->
+
+
+    <!-- Shy-box Start -->
+
+    <div>
+        <h1>Shy Bagde</h1>
+        <div class="shy-box">
+            <h1>Hello World</h1>
+            <div class="dot">
+                <p>3</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Shy-box End -->
+
+
+    <!-- Float-box Start -->
+
+
+    <h1>Floatbox</h1>
+
+    <div class="float-box">
+        <div class="red-box">
+            <div class="rbox1 rbox"></div>
+            <div class="rbox2 rbox"></div>
+            <div class="rbox3 rbox"></div>
+            <div class="rbox4 rbox"></div>
+        </div>
+        <div class="white-box">
+
+            <div class="wbox1 wbox"></div>
+            <div class="wbox2 wbox"></div>
+            <div class="wbox3 wbox"></div>
+            <div class="wbox4 wbox"></div>
+
+        </div>
+    </div>
+
+
+
+
+
 
 </body>
 
