--- a/Html/Form/index.html
+++ b/Html/Form/index.html
@@ -13,7 +13,7 @@
     <div class="survey">
         <div class="container">
             <div class="left">
-                <h1>General Information</h1>
+                <h1>General Information Uurchluv</h1>
                 <form action="" method="post">
                     <div class="name">
                         <label for="firstname"></label>
