--- a/Floatbox/Index.html
+++ b/Floatbox/Index.html
@@ -25,17 +25,16 @@
             <div class="rbox3 rbox">3</div>
             <div class="rbox4 rbox">4</div>
 
-
         </div> -->
 
-        <div class="wbox1 wbox">1</div>
-        <div class="wbox2 wbox">2</div>
-        <div class="wbox3 wbox">3</div>
-        <div class="wbox4 wbox">4</div>
-        <div class="rbox1 rbox">1</div>
-        <div class="rbox2 rbox">2</div>
-        <div class="rbox3 rbox">3</div>
-        <div class="rbox4 rbox">4</div>
+        <div class="wbox1 wbox"></div>
+        <div class="wbox2 wbox"></div>
+        <div class="wbox3 wbox"></div>
+        <div class="wbox4 wbox"></div>
+        <div class="rbox1 rbox"></div>
+        <div class="rbox2 rbox"></div>
+        <div class="rbox3 rbox"></div>
+        <div class="rbox4 rbox"></div>
 
     </div>
 
