--- a/Html/Transition/Floatbox/Floatbox.html
+++ b/Html/Transition/Floatbox/Floatbox.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Floatbox-style.css">
     <title>Floatbox</title>
 </head>
 
@@ -15,38 +15,19 @@
 
     <div class="floatbox">
 
-
-        <!-- <div class="red-box">
-
-
-            <div class="rbox1 rbox">1</div>
-            <div class="rbox2 rbox">2</div>
-
-            <div class="rbox3 rbox">3</div>
-            <div class="rbox4 rbox">4</div>
-
-        </div> -->
-
         <div class="wbox1 wbox"></div>
         <div class="wbox2 wbox"></div>
         <div class="wbox3 wbox"></div>
         <div class="wbox4 wbox"></div>
+
+        <!-- ----------------------- -->
+
         <div class="rbox1 rbox"></div>
         <div class="rbox2 rbox"></div>
         <div class="rbox3 rbox"></div>
         <div class="rbox4 rbox"></div>
 
     </div>
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
