--- a/Html/Bootstrap/Show-case/index.html
+++ b/Html/Bootstrap/Show-case/index.html
@@ -14,36 +14,19 @@
 
     <div class="container text-light w-100 d-flex justify-content-between align-items-center" style="height: 500px;">
 
-
-
-        <div class="d-flex justify-content-between align-items-center col-md-12"  >
+        <div class="d-flex justify-content-between align-items-center col-md-12 col-sm-12"  >
             <div class="text d-flex flex-column justify-content-center align-items-start col-sm-6 col-md-6 " >
                 <h1>Digital Solution To Your Business</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni eos ut quibusdam aut nisi quisquam eligendi quas necessitatibus est adipisci aperiam temporibus culpa reprehenderit eius provident, laudantium in saepe autem esse, similique minima quaerat animi.</p>
                 <button type="button" class="btn btn-primary mt-3">Learn more</button>
             </div>
 
-            <div class=" col-md-6 col-sm-6 " >
+            <div class=" col-md-6 col-sm-12 " >
                 <img src="./undraw_engineering_team_a7n2.svg" alt="" class="w-100">
             </div>  
 
 
         </div>
-
-        <!-- <div class="text w-50 d-flex flex-column justify-content-center align-items-start col-sm-12" >
-            <h1>Digital Solution To Your Business</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni eos ut quibusdam aut nisi quisquam eligendi quas necessitatibus est adipisci aperiam temporibus culpa reprehenderit eius provident, laudantium in saepe autem esse, similique minima quaerat animi.</p>
-            <button type="button" class="btn btn-primary mt-3">Learn more</button>
-        </div>
-
-
-        <div class="w-50 col-sm-0" >
-            <img src="./undraw_engineering_team_a7n2.svg" alt="" class="w-100">
-        </div> -->
-
-
-
-
     </div>
 
 </body>
