--- a/Html/Bootstrap/Show-case/index.html
+++ b/Html/Bootstrap/Show-case/index.html
@@ -10,24 +10,57 @@
     <title>Showcase</title>
 </head>
 
-<body class="bg-dark mt-5 ">
+<body class=" ">
 
-    <div class="container text-light w-100 d-flex justify-content-between align-items-center" style="height: 500px;">
+    <div class="row bg-dark " style="padding: 100px;">
+        <div class="container text-light  d-flex justify-content-between align-items-center" style="height: 500px;">
+            <div class="col ">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="text d-flex flex-column justify-content-center align-items-start">
 
-        <div class="d-flex justify-content-between align-items-center col-md-12 col-sm-12"  >
-            <div class="text d-flex flex-column justify-content-center align-items-start col-sm-6 col-md-6 " >
-                <h1>Digital Solution To Your Business</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni eos ut quibusdam aut nisi quisquam eligendi quas necessitatibus est adipisci aperiam temporibus culpa reprehenderit eius provident, laudantium in saepe autem esse, similique minima quaerat animi.</p>
-                <button type="button" class="btn btn-primary mt-3">Learn more</button>
+                        <div class="h1">
+                            <h1>Digital Solution <span class="text-info">To Your Business</span> </h1>
+                        </div>
+
+                        <div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni eos ut quibusdam aut
+                                nisi
+                                quisquam eligendi quas necessitatibus est adipisci aperiam temporibus culpa
+                                reprehenderit
+                                eius provident, laudantium in saepe autem esse, similique minima quaerat animi.
+                            </p>
+                        </div>
+
+                        <div class="button text-center text-sm-center text-md-start">
+                            <button class="btn btn-primary" type="button">Learn More</button>
+                        </div>
+
+
+
+
+                    </div>
+
+
+                    <div class=" col-lg-4 d-md-block d-sm-none d-none ">
+
+                        <div>
+                            <img src="./undraw_engineering_team_a7n2.svg" alt="" class="w-100">
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
 
-            <div class=" col-md-6 col-sm-12 " >
-                <img src="./undraw_engineering_team_a7n2.svg" alt="" class="w-100">
-            </div>  
-
-
         </div>
+
+
     </div>
+
+
+
+
 
 </body>
 
