--- a/Html/Bootstrap/Bootstrap-page/index.html
+++ b/Html/Bootstrap/Bootstrap-page/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,23 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Bootstrap Page</title>
 </head>
+
 <body>
 
     <div class="container-fluid bg-primary d-flex flex-column justify-content-center align-items-center">
-        <h1>WE PROMOTE FOR CAREER</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore laboriosam, laborum sunt praesentium odit ducimus nam ad id optio? Ipsa deserunt quam aliquid laborum. In debitis culpa dolorem quo provident.</p>
+        <div class="mt-3 mb-5 text d-flex flex-column justify-content-center align-items-center text-white" style="width: 95%;">
+
+            <h1>WE PROMOTE FOR CAREER</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore laboriosam, laborum sunt praesentium odit
+            ducimus nam ad id optio? Ipsa deserunt quam aliquid laborum. In debitis culpa dolorem quo provident. Lorem
+            ipsum, dolor sit amet consectetur adipisicing elit. Illo ipsum non enim corrupti culpa animi. Lorem ipsum
+            dolor sit amet, consectetur ea.
+        </p>
+
+        </div>
+        
     </div>
-    
+
 </body>
+
 </html>
