--- a/JS/Key-event/index.html
+++ b/JS/Key-event/index.html
@@ -22,6 +22,7 @@
                 <h1>Todo List App</h1>
             </div>
             <h3 id="date"><strong>Он сар өдөр:</strong></h3>
+            <p id="taskleft">0 - Tasks</p>
             <div id="entry">
                 <div id="center-entry">
                     <input autofill="off" type="text" id="to-do-input" placeholder="Таскын нэрээ оруулна уу." />
@@ -30,7 +31,17 @@
             </div>
             <section id="tasks-list">
                 <div><h1>Жагсаалт</h1></div>
-                <div id="tasks"></div>
+                <div id="tasks">
+                    <!-- `
+                    <div class="task">
+                        <input type="text" class="text" readonly value="${text}" />
+                        <div class="actions">
+                            <button class="edit" onclick="edit(this)"><i class="fas fa-pen"></i></button>
+                            <button class="done" onclick="done(this)"><i class="fas fa-check"></i></button>
+                            <button class="delete" onclick="ustgah(this)"><i class="fas fa-trash"></i></button>
+                        </div>
+                    </div>` -->
+                </div>
               </section>
         </div>
     </main>
