--- a/JS/Key-event/index.html
+++ b/JS/Key-event/index.html
@@ -26,6 +26,14 @@
             <div id="entry">
                 <div id="center-entry">
                     <input autofill="off" type="text" id="to-do-input" placeholder="Таскын нэрээ оруулна уу." />
+
+                    <select name="select" id="Select" >
+                        <option value="">Select</option>
+                        <option value="High">High</option>
+                        <option value="Mid">Mid</option>
+                        <option value="Bot">Bot</option>
+
+                    </select>
                     <button id="add">+ нэмэх</button>
                 </div>
             </div>
